[gd_scene load_steps=2 format=3 uid="uid://bfa3otr0r1esl"]

[ext_resource type="Script" path="res://Entities/Bullets/BaseBullet.gd" id="1_yv4m2"]

[node name="BaseBullet" type="Area2D" node_paths=PackedStringArray("life_timer") groups=["bullet"]]
collision_layer = 8
collision_mask = 6
script = ExtResource("1_yv4m2")
speed = 1000.0
top_speed = 1600.0
acceleration = 10.0
life_timer = NodePath("LifeTimer")

[node name="Sprite2D" type="Polygon2D" parent="."]
z_index = -1
scale = Vector2(8, 8)
color = Color(0.933333, 0.0117647, 0, 1)
polygon = PackedVector2Array(3, 0, -4, -2, -1, 0, -4, 2)

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
scale = Vector2(8, 8)
polygon = PackedVector2Array(-0.875, 0, -1.75, -1.125, 2.25, 0, -1.75, 1.125)

[node name="Trail" type="Line2D" parent="."]

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
